--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 dj-database-url==2.3.0
 Django==5.1.5
 Faker==35.0.0
+pillow==11.1.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
